--- a/packages/sync-ui/src/foundation/_all.scss
+++ b/packages/sync-ui/src/foundation/_all.scss
@@ -1,4 +1,4 @@
 @import "./_variables";
 @import "./_colors";
-@import "./typography";
-@import "./mixins";
+@import "./_typography";
+@import "./_mixins";
