create molecules for react component

--- a/packages/sync-ui/lib/global.css
+++ b/packages/sync-ui/lib/global.css
@@ -147,6 +147,8 @@
  * Allows for easier and more readable media queries.
  * @param {string} $breakpoint - The breakpoint for the media query.
  */
+/*----------  Padding  ----------*/
+/*----------  Margin  ----------*/
 /*----------  Flexbox Layouts  ----------*/
 /**
  * Mixin for flexbox container.
