--- a/packages/sync-ui/lib/button.css
+++ b/packages/sync-ui/lib/button.css
@@ -137,6 +137,8 @@
  * Allows for easier and more readable media queries.
  * @param {string} $breakpoint - The breakpoint for the media query.
  */
+/*----------  Padding  ----------*/
+/*----------  Margin  ----------*/
 /*----------  Flexbox Layouts  ----------*/
 /**
  * Mixin for flexbox container.
