--- a/packages/sync-ui/lib/select.css
+++ b/packages/sync-ui/lib/select.css
@@ -203,40 +203,48 @@
 /*=============================================
 =            End of Essential Mixins          =
 =============================================*/
-.su-text {
-  margin: 0;
+.su-select {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+}
+.su-select__label {
+  align-items: center;
+  background-color: var(--dse-form-bg-color, #ffffff);
+  border: 1px solid var(--dse-form-border-color, #c4c4c4);
+  cursor: pointer;
+  display: flex;
   font-family: var(--su-body-font-family, "Helvetica, Arial, sans-serif");
-  color: #000000;
+  justify-content: space-between;
+  padding: 2rem;
 }
-
-.su-text-xs {
-  font-size: 0.75rem;
+.su-select__overlay {
+  padding: 0;
+  margin: 0;
+  box-shadow: "base" 2px 5px 0px rgba(0, 0, 0, 0.1);
+  list-style-type: none;
+  background-color: var(--dse-form-bg-color, #ffffff);
+  border: 1px solid var(--dse-form-border-color, #c4c4c4);
+  width: 100%;
+  z-index: 99;
+  position: absolute;
 }
-
-.su-text-sm {
-  font-size: 0.875rem;
+.su-select__option {
+  padding: 0.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  width: 100%;
+  box-sizing: border-box;
 }
-
-.su-text-base {
-  font-size: 1rem;
+.su-select__option:hover {
+  background-color: var(--dse-form-bg-color-hover, #f5f5f5);
 }
-
-.su-text-lg {
-  font-size: 1.125rem;
+.su-select__option--selected {
+  background-color: var(--dse-form-bg-option-selected, #28a745);
+  color: var(--dse-form-color-option-selected, #ffffff);
 }
-
-.su-text-xl {
-  font-size: 1.5rem;
-}
-
-.su-text-center {
-  text-align: center;
-}
-
-.su-text-right {
-  text-align: right;
-}
-
-.su-text-left {
-  text-align: left;
+.su-select__option--selected:hover {
+  background-color: var(--dse-form-bg-option-selected, #28a745);
 }
